<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/username"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameText"
        app:layout_constraintVertical_bias="0.778" />

    <EditText
        android:id="@+id/UserIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/userID"
        android:ems="10"
        android:hint="@string/userID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494" />

    <EditText
        android:id="@+id/UsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserIDText"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameText"
        app:layout_constraintVertical_bias="0.16" />
</android.support.constraint.ConstraintLayout>